--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '20'
         cache: 'npm'
         cache-dependency-path: crisis-line-web/package-lock.json
         
@@ -30,6 +30,9 @@ jobs:
       run: |
         cd crisis-line-web
         npm run build
+        
+    - name: Install Firebase CLI
+      run: npm install -g firebase-tools@13.0.0
         
     - name: Deploy to Firebase
       uses: FirebaseExtended/action-hosting-deploy@v0
